opam-version: "2.0"
synopsis: "Skip list"
description: """
William Pugh's skip list data structure in OCaml.
"""
authors: "Francois Berenger"
maintainer: "unixjunkie@sdf.org"
license: "BSD-3-Clause"
homepage: "https://github.com/UnixJunkie/slist"
dev-repo: "git://github.com/UnixJunkie/slist"
bug-reports: "https://github.com/UnixJunkie/slist/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml"
  "dune"
]
# url {
#   src: "https://github.com/UnixJunkie/slist/archive/XXX"
#   checksum: "md5=YYY"
# }
