opam-version: "2.0"
synopsis: "Skip list implementation in OCaml"
description: """
William Pugh's skip list data structure.
Currently, this is a purely functional implementation while
the original one is imperative.
"""
authors: "Pierre Corbineau"
maintainer: "unixjunkie@sdf.org"
license: "LGPL-2.1-or-later with OCaml-LGPL-linking-exception"
homepage: "https://github.com/UnixJunkie/slist"
dev-repo: "git://github.com/UnixJunkie/slist"
bug-reports: "https://github.com/UnixJunkie/slist/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml"
  "dune"
]
# url {
#   src: "https://github.com/UnixJunkie/slist/archive/XXX"
#   checksum: "md5=YYY"
# }
